--- a/less/services.less
+++ b/less/services.less
@@ -40,6 +40,10 @@
 
            .card-main {
                width: 57%;
+               
+               p {
+                   margin-top: 30px;
+               }
             
            }
 
